[tool.poetry]
name = "codespace-algorand"
version = "0.1.0"
description = ""
authors = ["Amelia Dutta <49182604+amelia2802@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
